// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`commonmark-0.30-example-334.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
\` \`
\`  \`

=====================================output=====================================
\` \` \`  \`

================================================================================
`;

exports[`example-11.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
<!-- placeholder for continuous thematic breaks not being treated as yaml -->

***
---
___

=====================================output=====================================
<!-- placeholder for continuous thematic breaks not being treated as yaml -->

---

---

---

================================================================================
`;

exports[`example-15.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
<!-- placeholder for continuous thematic breaks not being treated as yaml -->

 ***
  ***
   ***

=====================================output=====================================
<!-- placeholder for continuous thematic breaks not being treated as yaml -->

---

---

---

================================================================================
`;

exports[`example-33.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
#	foo

=====================================output=====================================
# foo

================================================================================
`;

exports[`example-46.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
<!-- placeholder for continuous thematic breaks not being treated as yaml -->

****
## foo
****

=====================================output=====================================
<!-- placeholder for continuous thematic breaks not being treated as yaml -->

---

## foo

---

================================================================================
`;

exports[`example-134.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
<pre language="haskell"><code>
import Text.HTML.TagSoup

main :: IO ()
main = print $ parseTags tags
</code></pre>

=====================================output=====================================
<pre language="haskell"><code>
import Text.HTML.TagSoup

main :: IO ()
main = print $ parseTags tags
</code></pre>

================================================================================
`;

exports[`example-135.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
<script type="text/javascript">
// JavaScript example

document.getElementById("demo").innerHTML = "Hello JavaScript!";
</script>

=====================================output=====================================
<script type="text/javascript">
// JavaScript example

document.getElementById("demo").innerHTML = "Hello JavaScript!";
</script>

================================================================================
`;

exports[`example-136.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
<style
  type="text/css">
h1 {color:red;}

p {color:blue;}
</style>

=====================================output=====================================
<style
  type="text/css">
h1 {color:red;}

p {color:blue;}
</style>

================================================================================
`;

exports[`example-143.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
<!-- Foo

bar
   baz -->

=====================================output=====================================
<!-- Foo

bar
   baz -->

================================================================================
`;

exports[`example-144.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
<?php

  echo '>';

?>

=====================================output=====================================
<?php

  echo '>';

?>

================================================================================
`;

exports[`example-146.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
<![CDATA[
function matchwo(a,b)
{
  if (a < b && a < 0) then {
    return 1;

  } else {

    return 0;
  }
}
]]>

=====================================output=====================================
<![CDATA[
function matchwo(a,b)
{
  if (a < b && a < 0) then {
    return 1;

  } else {

    return 0;
  }
}
]]>

================================================================================
`;

exports[`example-159.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[Foo bar]:
<my%20url>
'title'

[Foo bar]

=====================================output=====================================
[Foo bar]: my%20url "title"

[Foo bar]

================================================================================
`;

exports[`example-215.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- one

two

=====================================output=====================================
- one

two

================================================================================
`;

exports[`example-222.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- foo

  bar

- foo


  bar

- \`\`\`
  foo


  bar
  \`\`\`

- baz

  + \`\`\`
    foo


    bar
    \`\`\`

=====================================output=====================================
- foo

  bar

- foo

  bar

- \`\`\`
  foo


  bar
  \`\`\`

- baz
  - \`\`\`
    foo


    bar
    \`\`\`

================================================================================
`;

exports[`example-224.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- Foo

      bar

      baz

=====================================output=====================================
- Foo

      bar

      baz

================================================================================
`;

exports[`example-253.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- foo
  - bar
    - baz

=====================================output=====================================
- foo
  - bar
    - baz

================================================================================
`;

exports[`example-254.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- foo
 - bar
  - baz

=====================================output=====================================
- foo
- bar
- baz

================================================================================
`;

exports[`example-265.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- foo


  bar
- baz

=====================================output=====================================
- foo

  bar

- baz

================================================================================
`;

exports[`example-267.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- foo
- bar


- baz
- bim

=====================================output=====================================
- foo
- bar

- baz
- bim

================================================================================
`;

exports[`example-268.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
-   foo

    notcode

-   foo


    code

=====================================output=====================================
- foo

  notcode

- foo

  code

================================================================================
`;

exports[`example-269.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- a
 - b
  - c
   - d
    - e
   - f
  - g
 - h
- i

=====================================output=====================================
- a
- b
- c
- d
- e
- f
- g
- h
- i

================================================================================
`;

exports[`example-287.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
\\*not emphasized*
\\<br/> not a tag
\\[not a link](/foo)
\\\`not code\`
1\\. not a list
\\* not a list
\\# not a heading
\\[foo]: /url "not a reference"

=====================================output=====================================
\\*not emphasized\\* \\<br/> not a tag \\[not a link](/foo) \\\`not code\` 1\\. not a
list \\* not a list \\# not a heading \\[foo]: /url "not a reference"

================================================================================
`;

exports[`example-293.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
<http://example.com?find=\\*>

=====================================output=====================================
<http://example.com?find=\\*>

================================================================================
`;

exports[`example-299.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
&#35; &#1234; &#992; &#98765432; &#0;

=====================================output=====================================
&#35; &#1234; &#992; &#98765432; &#0;

================================================================================
`;

exports[`example-301.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
&nbsp &x; &#; &#x;
&ThisIsNotDefined; &hi?;

=====================================output=====================================
&nbsp &x; &#; &#x; &ThisIsNotDefined; &hi?;

================================================================================
`;

exports[`example-311.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
\`\` foo \` bar  \`\`

=====================================output=====================================
\`\`foo \` bar \`\`

================================================================================
`;

exports[`example-314.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
\`foo   bar
  baz\`

=====================================output=====================================
\`foo   bar   baz\`

================================================================================
`;

exports[`example-315.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
\`foo \`\` bar\`

=====================================output=====================================
\`foo \`\` bar\`

================================================================================
`;

exports[`example-321.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
\`<http://foo.bar.\`baz>\`

=====================================output=====================================
\`<http://foo.bar.\`baz>\`

================================================================================
`;

exports[`example-322.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
<http://foo.bar.\`baz>\`

=====================================output=====================================
<http://foo.bar.\`baz>\`

================================================================================
`;

exports[`example-441.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
**foo*bar**

=====================================output=====================================
**foo\\*bar**

================================================================================
`;

exports[`example-452.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
**a<http://foo.bar/?q=**>

=====================================output=====================================
**a<http://foo.bar/?q=**>

================================================================================
`;

exports[`example-453.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
__a<http://foo.bar/?q=__>

=====================================output=====================================
**a<http://foo.bar/?q=**>

================================================================================
`;

exports[`example-463.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[link]((foo)and(bar))

=====================================output=====================================
[link](<(foo)and(bar)>)

================================================================================
`;

exports[`example-465.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[link](foo(and\\(bar\\)))

=====================================output=====================================
[link](<foo(and(bar))>)

================================================================================
`;

exports[`example-466.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[link](<foo(and(bar))>)

=====================================output=====================================
[link](<foo(and(bar))>)

================================================================================
`;

exports[`example-468.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[link](#fragment)

[link](http://example.com#fragment)

[link](http://example.com?foo=3#frag)

=====================================output=====================================
[link](#fragment)

[link](http://example.com#fragment)

[link](http://example.com?foo=3#frag)

================================================================================
`;

exports[`example-492.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[foo<http://example.com/?search=](uri)>

=====================================output=====================================
[foo<http://example.com/?search=](uri)>

================================================================================
`;

exports[`example-501.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[foo *bar][ref]

[ref]: /uri

=====================================output=====================================
[foo \\*bar][ref]

[ref]: /uri

================================================================================
`;

exports[`example-504.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[foo<http://example.com/?search=][ref]>

[ref]: /uri

=====================================output=====================================
[foo<http://example.com/?search=][ref]>

[ref]: /uri

================================================================================
`;

exports[`example-506.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[Толпой][Толпой] is a Russian word.

[ТОЛПОЙ]: /url

=====================================output=====================================
[Толпой][Толпой] is a Russian word.

[ТОЛПОЙ]: /url

================================================================================
`;

exports[`example-555.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
\\!\\[foo]

[foo]: /url "title"

=====================================output=====================================
\\!\\[foo]

[foo]: /url "title"

================================================================================
`;

exports[`example-558.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
<http://foo.bar.baz/test?q=hello&id=22&boolean>

=====================================output=====================================
<http://foo.bar.baz/test?q=hello&id=22&boolean>

================================================================================
`;

exports[`example-563.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
<http://../>

=====================================output=====================================
<http://../>

================================================================================
`;

exports[`example-565.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
<http://foo.bar/baz bim>

=====================================output=====================================
<http://foo.bar/baz bim>

================================================================================
`;

exports[`example-566.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
<http://example.com/\\[\\>

=====================================output=====================================
<http://example.com/\\[\\>

================================================================================
`;

exports[`example-571.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
< http://foo.bar >

=====================================output=====================================
< http://foo.bar >

================================================================================
`;

exports[`example-574.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
http://example.com

=====================================output=====================================
http://example.com

================================================================================
`;

exports[`example-584.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
< a><
foo><bar/ >

=====================================output=====================================
< a>< foo><bar/ >

================================================================================
`;

exports[`example-588.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
foo <!-- this is a
comment - with hyphen -->

=====================================output=====================================
foo <!-- this is a
comment - with hyphen -->

================================================================================
`;

exports[`example-589.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
foo <!-- not a comment -- two hyphens -->

=====================================output=====================================
foo <!-- not a comment -- two hyphens -->

================================================================================
`;

exports[`example-590.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
foo <!--> foo -->

foo <!-- foo--->

=====================================output=====================================
foo <!--> foo -->

foo <!-- foo--->

================================================================================
`;
